Add Length in link GUI

--- a/AFDX_GUI/ui/LinkDialog.ui
+++ b/AFDX_GUI/ui/LinkDialog.ui
@@ -66,6 +66,33 @@
      </layout>
     </item>
     <item>
+     <widget class="QLabel" name="timelabel2">
+      <property name="sizePolicy2">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Length :</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLineEdit" name="length">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="readOnly">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <widget class="QLabel" name="port1Name">
       <property name="text">
        <string>Port 1 type:</string>
